# USAAIO-practice

./: 2026_Round_1_Sample.ipynb  NumPyDemo (1).ipynb  git_repo_creation.md  latex_practice.ipynb  problem_13.ipynb  problem_13_second_submission.ipynb  pyproject.toml  sklearn_demo.ipynb  torch_playground.ipynb
2025_Round_2/: Solution_1.ipynb
linear_algebra/: LA_vectors.ipynb
pytorch_practice/: tensor_creation.ipynb  tensors.ipynb
