[project]
name = "usaaio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.1.0",
    "jupyterlab>=4.5.3",
    "matplotlib>=3.10.8",
    "mdutils>=1.8.1",
    "numpy>=2.4.1",
    "pandas>=3.0.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "torch>=2.1.0,<3.0",
    "torchsummary>=1.5.1",
    "torchvision>=0.16.0,<1.0",
]

[tool.uv.workspace]
members = [
    "pandas_exercises",
]
